# Basilio

./: .gitignore  CMakeLists.txt  index.html  style.css
js/: Byte.js  Byte.js.map  Byte.ts  LCD.js  LCD.js.map  LCD.ts  Memory.js  Memory.js.map  Memory.ts  Registers.js  Registers.js.map  Registers.ts  TI.js  TI.js.map  TI.ts
js/ops/: 0x0.js  0x0.js.map  0x0.ts  0x1.js  0x1.js.map  0x1.ts  generic.js  generic.js.map  generic.ts
src/: main.c
